import "Severity.proto";

package Diadoc.Api.Proto;

message RoamingSendingStatus {
	required Severity Severity = 1;
	required RoamingSendingStatusNamedId StatusNamedId = 2;
	optional string StatusText = 3;
	repeated RoamingSendingError Errors = 4;
}

enum RoamingSendingStatusNamedId {
	UnknownStatus = 0; //reserved for backward compatibility
	IsSent = 1;
	SendingError = 2;
}

message RoamingSendingError {
	required string Code = 1;
	required string Text = 2;
}